2013-09-07 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-gtk-utils.c (base_gtk_utils_table_to_grid):
	Obsoletes GtkTable starting with Gtk 3.4.

	* src/nact/egg-sm-client-xsmp.c: Obsoletes gdk_threads_enter(), 
	gdk_threads_leave() starting with gdk 3.6.

	* src/nact/base-gtk-utils.c: Remove useless blank lines.

	* src/nact/base-application.c (g_type_init):
	* src/test/test-iface.c (g_type_init):
	* src/test/test-iface2.c (g_type_init):
	* src/test/test-module.c (g_type_init):
	* src/test/test-parse-uris.c (g_type_init):
	* src/test/test-reader.c (g_type_init):
	* src/test/test-virtuals-without-test.c (g_type_init):
	* src/test/test-virtuals.c (g_type_init):
	* src/utils/na-delete-xmltree.c (g_type_init):
	* src/utils/na-print-schemas.c (g_type_init):
	* src/utils/na-set-conf.c (g_type_init):
	* src/utils/nautilus-actions-new.c (g_type_init):
	* src/utils/nautilus-actions-print.c (g_type_init):
	* src/utils/nautilus-actions-run.c (g_type_init):
	Obsoletes g_type_init() starting with glib 2.36.

2013-02-22 Pierre Wieser <pwieser@trychlos.org>

	* Allmost all files: Bump copyright year.

	* ChangeLog-2012: New file.